Fix assert due to reentrancy in KDirLister (openUrl -> stop -> emit canceled -> KDirOperator would then do  slotLoadingFinished -> setCurrentItem -> expandToUrl -> listDir). Just like r891975, people don't expect canceled to be emitted for internal reasons, only when actually canceling the job from the outside.

This assert was added in 891960, so it also fixes the ASSERT: "!listersCurrentlyHolding.contains(kdl)" that sebas was getting in the file dialog.

BUG: 177387

svn path=/trunk/KDE/kdelibs/; revision=897298